--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bdk = { git = "https://github.com/ulrichard/bdk/", branch = "master", features = ["electrum"] }
+bdk = { git = "https://github.com/bitcoindevkit/bdk", branch = "master", features = ["electrum"] }
 bitcoinconsensus = "0.19.0-3"
 base64 = "^0.11"
 log = "^0.4"
