--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Proof of reserves for bitcoin dev kit"
 keywords = ["proof", "reserves", "bitcoin", "psbt"]
 readme = "README.md"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/ulrichard/bdk-reserves"
 
 [dependencies]
 bdk = "^0.11"
