--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/weareseba/bdk-reserves"
 
 [dependencies]
-bdk = { version = "^0.14", default-features = false }
+bdk = { git = "https://github.com/bitcoindevkit/bdk", default-features = false }
 bitcoinconsensus = "0.19.0-3"
 base64 = "^0.11"
 log = "^0.4"
@@ -18,4 +18,4 @@ log = "^0.4"
 [dev-dependencies]
 rstest = "^0.11"
 bdk-testutils = "^0.4"
-bdk = { version = "^0.14", default-features = true }
+bdk = { git = "https://github.com/bitcoindevkit/bdk", default-features = true }
