Add cargo update step to CI Build and Test

--- a/.github/workflows/cont_integration.yml
+++ b/.github/workflows/cont_integration.yml
@@ -33,6 +33,8 @@ jobs:
         run: rustup component add clippy
       - name: Update toolchain
         run: rustup update
+      - name: Update Cargo.lock
+        run: cargo update
       - name: Build
         run: cargo build
       - name: Clippy
