--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ log = "^0.4"
 rstest = "^0.11"
 bdk-testutils = "^0.4"
 bdk = { version = "0.23", default-features = true }
+electrsd = { version = "0.20", features = ["bitcoind_22_0", "electrs_0_9_1"] }
