--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bdk-reserves"
-version = "0.27.1"
+version = "0.28.0"
 authors = ["Richard Ulrich <richard.ulrich@seba.swiss>"]
 edition = "2018"
 description = "Proof of reserves for bitcoin dev kit"
@@ -10,13 +10,14 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/bitcoindevkit/bdk-reserves"
 
 [dependencies]
-bdk = { version = "0.27.1", default-features = false }
+bdk = { version = "0.28", default-features = false }
 bitcoinconsensus = "0.19.0-3"
 log = "^0.4"
 
 [dev-dependencies]
 rstest = "^0.11"
 bdk-testutils = "^0.4"
-bdk = { version = "0.27.1", default-features = true }
+bdk = { version = "0.28", default-features = true }
 electrsd = { version = "0.21", features = ["bitcoind_22_0", "electrs_0_9_1"] }
-base64 = "^0.13"
+# base64ct versions at 1.6.0 and higher have MSRV 1.60.0
+base64ct = { version = "<1.6.0", features = ["alloc"] }
