--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bdk-reserves"
 version = "0.28.1"
-authors = ["Richard Ulrich <richard.ulrich@seba.swiss>"]
+authors = ["Richard Ulrich <richard.ulrich@aminagroup.com>"]
 edition = "2018"
 description = "Proof of reserves for bitcoin dev kit"
 keywords = ["proof", "reserves", "bitcoin", "psbt"]
