--- a/.github/workflows/cont_integration.yml
+++ b/.github/workflows/cont_integration.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       matrix:
         rust:
-          - 1.65.0 # STABLE
-          - 1.57.0 # MSRV
+          - 1.75.0 # STABLE
+          - 1.63.0 # MSRV
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -36,15 +36,9 @@ jobs:
       - name: Update Cargo.lock
         run: cargo update
       - name: Pin dependencies for MSRV
-        if: matrix.rust == '1.57.0'
+        if: matrix.rust == '1.63.0'
         run: |
-          cargo update -p log:0.4.20 --precise 0.4.18
-          cargo update -p tempfile --precise 3.6.0
-          cargo update -p webpki:0.22.4 --precise 0.22.0
-          cargo update -p rustls:0.20.9 --precise 0.20.8
-          cargo update -p sct:0.7.1 --precise 0.7.0
-          cargo update -p tokio:1.35.0 --precise 1.29.1
-          cargo update -p byteorder:1.5.0 --precise 1.4.3
+          cargo update -p home:0.5.9 --precise 0.5.5
       - name: Build
         run: cargo build
       - name: Clippy
