--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,11 @@ repository = "https://github.com/bitcoindevkit/bdk-reserves"
 [dependencies]
 bdk = { version = "0.28", default-features = false }
 bitcoinconsensus = "0.19.0-3"
+esplora-client = { version = "0.4", default-features = false, optional = true }
 log = "^0.4"
+
+[features]
+use-esplora-blocking = ["esplora-client/blocking"]
 
 [dev-dependencies]
 rstest = "^0.11"
