--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ esplora-client = { version = "0.4", default-features = false, optional = true }
 log = "^0.4"
 
 [features]
-use-esplora-blocking = ["esplora-client/blocking"]
+use-esplora-blocking = ["esplora-client/blocking", "bdk/use-esplora-blocking"]
 
 [dev-dependencies]
 rstest = "^0.11"
 bdk-testutils = "^0.4"
 bdk = { version = "0.28", default-features = true }
-electrsd = { version = "0.23", features = ["bitcoind_22_0", "electrs_0_9_1"] }
+electrsd = { version = "0.23.1", features = ["bitcoind_23_0", "esplora_a33e97e1", "legacy"] }
