--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/bitcoindevkit/bdk-reserves"
 [dependencies]
 bdk = { version = "0.28", default-features = false }
 bitcoinconsensus = "0.19.0-3"
+bitcoincore-rpc = { version = "0.16", optional = true }
 electrum-client = { version = "0.12", optional = true }
 esplora-client = { version = "0.4", default-features = false, optional = true }
 log = "^0.4"
@@ -19,6 +20,7 @@ log = "^0.4"
 [features]
 electrum = ["electrum-client", "bdk/electrum"]
 use-esplora-blocking = ["esplora-client/blocking", "bdk/use-esplora-blocking"]
+rpc = ["bitcoincore-rpc", "bdk/rpc"]
 
 [dev-dependencies]
 rstest = "^0.11"
