upgrading to match bdk v29 CI fix for MSRV 1.63
Co-authored-by: Steve Myers <steve@notmandatory.org>

Co-authored-by: Steve Myers <steve@notmandatory.org>

--- a/.github/workflows/cont_integration.yml
+++ b/.github/workflows/cont_integration.yml
@@ -39,6 +39,8 @@ jobs:
         if: matrix.rust == '1.63.0'
         run: |
           cargo update -p home:0.5.9 --precise 0.5.5
+          cargo update -p tokio:1.39.3 --precise 1.38.1
+          cargo update -p cc --precise 1.0.105
       - name: Build
         run: cargo build
       - name: Clippy
