--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bdk-reserves"
-version = "0.28.1"
+version = "0.29.0"
 authors = ["Richard Ulrich <richard.ulrich@aminagroup.com>"]
 edition = "2018"
 description = "Proof of reserves for bitcoin dev kit"
@@ -10,12 +10,12 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/bitcoindevkit/bdk-reserves"
 
 [dependencies]
-bdk = { version = "0.28", default-features = false }
+bdk = { version = "0.29", default-features = false, features = ["std"] }
 bitcoinconsensus = "0.19.0-3"
 log = "^0.4"
 
 [dev-dependencies]
 rstest = "^0.11"
 bdk-testutils = "^0.4"
-bdk = { version = "0.28", default-features = true }
-electrsd = { version = "0.23", features = ["bitcoind_22_0", "electrs_0_9_1"] }
+bdk = { version = "0.29", default-features = true }
+electrsd = { version = "0.24", features = ["bitcoind_22_0", "electrs_0_9_1"] }
